[package]
name = "arbor-host"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt-sdk = { workspace = true, features = ["host"] }
jolt-inlines-sha2 = { workspace = true, features = ["host"] }
arbor-smt = { path = "../smt" }
guest = { package = "arbor-guest", path = "../guest" }
tracing = "0.1"
tracing-subscriber = "0.3"

[package.metadata.cargo-machete]
ignored = ["jolt-inlines-sha2"]
