[package]
name = "arbor-host"
version = "0.1.0"
edition = "2021"

[dependencies]
jolt-sdk = { workspace = true, features = ["host"] }
jolt-inlines-sha2 = { workspace = true, features = ["host"] }
arbor-core = { path = "../smt" }
guest = { package = "arbor-guest", path = "../guest" }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
arbor-trillian = { path = "../trillian" }
tokio = { version = "1", features = ["full"] }

[package.metadata.cargo-machete]
ignored = ["jolt-inlines-sha2"]
