[package]
name = "arbor-trillian"
version = "0.1.0"
edition = "2021"

[dependencies]
arbor-core = { path = "../smt" }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tracing-subscriber = "0.3"
tokio-test = "0.4"
