[package]
name = "arbor-store"
version = "0.1.0"
edition = "2021"

[dependencies]
arbor-core = { path = "../core" }
guest = { package = "arbor-guest", path = "../guest" }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
tracing = "0.1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
